# AelfcraeftTemplate

./: .gitignore  Aelfcraeft.csproj  Aelfcraeft.sln  BaseScene.cs  Survival.csproj  Survival.sln  base_scene.tscn  project.godot
Assets/: icon.svg.import
Assets/GameStates/: Game.tscn  GamePreload.tscn  MainMenu.tscn  MenuBackground.tscn  Options.tscn  PreloadBackground.tscn  Splash.tscn  Welcome.tscn  base_scene.tscn
Assets/GameStates/Scripts/: BaseGameState.cs  BaseScene.cs  Game.cs  GamePreload.cs  MainMenu.cs  (+4 more)
Assets/Materials/: CharcoalMaterial.tres  MarsMaterial.tres  TealMaterial.tres
Assets/Meshes/: CapsuleMesh.tres  CubeMesh.tres  GroundPlane.tres
Data/: config.txt  machine_options.txt  state.txt
Infrastructure/Management/: ApplicationManager.cs  Messages.cs  SceneManager.cs  ServiceCollection.cs
Infrastructure/Scripts/: ApplicationManager.cs  Messages.cs  SceneManager.cs  ServiceCollection.cs
Infrastructure/Services/: AssetLoaderService.cs  BaseService.cs  ConfigLoader.cs  ConfigService.cs  IInputMap.cs  ILogService.cs  InputService.cs  LogService.cs  Message.cs  MessengerService.cs  MissionService.cs  StateStorageService.cs
Maps/: DessertMountains.tscn
RDE/: CMakeLists.txt  RDCoreGameFunctionality.cpp
Tests/: run_tests.ps1  runsettings.config
Tests/Scripts/: run_asset_loader_tests.ps1  run_base_service_tests.ps1  run_config_loader_tests.ps1  run_input_service_tests.ps1  run_log_service_tests.ps1  run_messenger_service_tests.ps1  run_mission_service_tests.ps1  run_state_storage_service_tests.ps1
UI/: GameUI.tscn
docs/: README.md
(+14 files in other folders)
